@@ -46,7 +46,10 @@ end
 describe package('mysql-server'), :if => os[:family] == 'ubuntu' || (os[:family] == 'redhat' && os[:release].to_f < 7) do
   it { should be_installed }
 end
-describe package('mariadb-server'), :if => os[:family] == 'redhat' && os[:release].to_f >= 7 do
+describe file('/etc/yum.repos.d/mariadb.repo'), :if => os[:family] == 'redhat' && os[:release].to_f >= 7 do
+  its(:content) { should match /baseurl = https:\/\/downloads.mariadb.com\/MariaDB\/mariadb-10.5\/yum\/rhel\/7\/x86_64/ }
+end
+describe package('MariaDB-server'), :if => os[:family] == 'redhat' && os[:release].to_f >= 7 do
   it { should be_installed }
 end
 
@@ -338,7 +341,7 @@ end
 describe package('mysql-devel'), :if => os[:family] == 'redhat' && os[:release].to_f < 7 do
   it { should be_installed }
 end
-describe package('mariadb-devel'), :if => os[:family] == 'redhat' && os[:release].to_f >= 7 do
+describe package('MariaDB-devel'), :if => os[:family] == 'redhat' && os[:release].to_f >= 7 do
   it { should be_installed }
 end
 
